<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <!--NestedScrollView digunakan agar layar dapat discroll pas keyboard di device muncul walau pun EditText diklik-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--RelativeLayout mirip seperti ConstrainLayout dimana penempatan setiap view bisa fleksibel dimana saja, attribute yang perlu dituliskan lebih sederhana namun tidak seresponsive ConstraintLayout-->
            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp32"
                android:layout_marginBottom="@dimen/dp16"
                android:text="@string/txt_welcome"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/img_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_welcome"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_marginBottom="@dimen/dp16"
                android:src="@drawable/ic_welcome" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_login"
                style="@style/StandardTextInput"
                android:layout_below="@id/img_view"
                android:layout_centerHorizontal="true"
                > <!--TextInputLayout digunakan agar hint tetap tampil meski EditText diklik-->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />  <!--TextInputLayout digunakan agar hint tetap tampil meski EditText diklik-->

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_login"
                style="@style/StandardTextInput"
                android:layout_below="@id/til_email_login"
                android:layout_centerHorizontal="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>  <!--TextInputLayout digunakan agar hint tetap tampil meski EditText diklik-->

            <Button
                android:id="@+id/btn_login"
                style="@style/StandardButton"
                android:layout_below="@id/til_password_login"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_login"/>
            <TextView
                android:id="@+id/txt_signup"
                style="@style/LinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp8"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/txt_signup" />
            <!--endregion-->
        </RelativeLayout> </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/progress_layout_login"
        style="@style/ProgressLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--menampilkan ProgresBar-->
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>